[package]
name = "recrypt-wasm-binding"
version = "0.6.58-pre"
authors = ["IronCore Labs <code@ironcorelabs.com>"]
description = "Bindings to run recrypt-rs as a WebAssembly module."
license = "AGPL-3.0-only"
repository = "https://github.com/IronCoreLabs/recrypt-wasm-binding"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo-utils = { version = "0.1", features = ["serde"] }
ironcore-search-helpers = "0.1"
js-sys = "0.3"
rand = { version = "0.8.5", features = ["serde"] }
rand_chacha = "0.3"
rand_core = { version = "0.6.4", features = ["serde"] }
recrypt = { path = "../recrypt", features = ["wasm"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_arrays = "0.1.0"
serde_derive = "1"
serde_json = "1"
wasm-bindgen = "0.2.95"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
